# cosecha_urbana_ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: hackathon_submission.md
kibana/dashboards/: cosecha_urbana_dashboard.ndjson
scripts/: import_kibana_dashboard.py  run_demo.py  seed_database.py  setup_indices.py  setup_kibana_connector.py
src/cosecha_urbana_ai/: __init__.py  config.py
src/cosecha_urbana_ai/agent/: __init__.py  graph.py  state.py
src/cosecha_urbana_ai/agent/nodes/: __init__.py  analyze_node.py  execute_node.py  ingest_node.py  match_node.py  validate_node.py
src/cosecha_urbana_ai/agent/prompts/: __init__.py  planner.py
src/cosecha_urbana_ai/agent/tools/: __init__.py  esql_tool.py  geo_tool.py  notify_tool.py  search_tool.py
src/cosecha_urbana_ai/api/: __init__.py  dependencies.py  main.py
src/cosecha_urbana_ai/api/routers/: agent.py  alerts.py  donations.py  (+3 more)
src/cosecha_urbana_ai/elasticsearch/: __init__.py  client.py  indices.py
src/cosecha_urbana_ai/models/: __init__.py  agent_state.py  donation.py  donor.py  food_alert.py  recipient.py  route.py
src/cosecha_urbana_ai/notifications/: __init__.py  base.py  dispatcher.py  kibana_connector.py  slack_webhook.py  whatsapp.py
src/cosecha_urbana_ai/utils/: __init__.py  logging.py  metrics.py
src/cosecha_urbana_ai/workflows/: __init__.py  donation_workflow.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_agent_nodes.py  test_models.py
(+10 files in other folders)
